<resources>
    <string name="app_name">2DM3Burguer</string>
    <string name="total">TOTAL:</string>
    <string name="btnseguir">SEGUIR</string>
    <string name="btnsalir">SALIR</string>
    <string name="totalbebida">Total: </string>
    <string name="totalbebida2">0€</string>
    <string name="salirbebida">Salir</string>
    <string name="lblinicio">Bienvenido a la Hamburgueseria de Cebanc</string>
    <string name="Dclientes">Datos del Cliente</string>
    <string name="Dcomida">Datos del pedido:carnes</string>
    <string name="dbebida">Datos del pedido:bebidas</string>
    <string name="clasica">Clasicas:</string>
    <string name="clasiqueso">Clasica con queso:</string>
    <string name="dobleq">Doble de queso:</string>
    <string name="vegetal">Vegetal:</string>
    <string name="especial">Especial:</string>
    <string name="agua">Agua:</string>
    <string name="nestea">Nestea:</string>
    <string name="limon">Limon:</string>
    <string name="naranja">Naranja:</string>
    <string name="Cola">Coca Cola:</string>
    <string name="cerveza">Cerveza:</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Rechazar">Rechazar</string>
    <string name="borrar">borrar</string>
    <string name="aniadepedido">Añadir al pedido</string>
    <string name="modpedido">Modificar pedido</string>
    <string name="regalo">REGALO!!</string>
    <string name="tamanio">Tamaño del menu:</string>
    <string name="autores">Autores:Aimar Correyero y Diego Martínez</string>
    <string name="Version">Version Actual:1.0.2</string>
    <string name="verApi">Version de la API:24</string>
    <string name="verAndroid">Version Android: 4.4</string>
    <string name="Empresa">Empresa:2DM3</string>
    <string name="tcarne">Tipo de carne:</string>
    <string name="datostitulo">Datos de la App </string>
    <string name="buscacli">Buscar cliente</string>


    </resources>
