<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f94327">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dclientes"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombre"
        android:textSize="20dp"
        android:text="new text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/direccion"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/telefono"
        android:textSize="20dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dcomida"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clasica"
        android:id="@+id/clasica"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clasiqueso"
        android:id="@+id/clasiqueso"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dobleq"
        android:id="@+id/doblequeso"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vegetal"
        android:id="@+id/vegetal"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/especial"
        android:id="@+id/especial"
        android:textSize="20dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbebida"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Aceptar"
            android:id="@+id/btnaceptar"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/btnrechazar"
            android:layout_toStartOf="@+id/btnrechazar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rechazar"
            android:id="@+id/btnrechazar"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agua"
            android:id="@+id/agua"
            android:textSize="20dp"
            android:layout_below="@+id/limon"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nestea"
            android:id="@+id/nestea"
            android:textSize="20dp"
            android:layout_below="@+id/cola"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limon"
            android:id="@+id/limon"
            android:textSize="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naranja"
            android:id="@+id/naranja"
            android:textSize="20dp"
            android:layout_below="@+id/cerveza"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cola"
            android:id="@+id/cola"
            android:textSize="20dp"
            android:layout_below="@+id/naranja"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerveza"
            android:id="@+id/cerveza"
            android:textSize="20dp"
            android:layout_below="@+id/agua"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TOTAL:"
            android:id="@+id/total"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_below="@+id/nestea"
            android:layout_alignParentLeft="true" />
    </RelativeLayout>

</LinearLayout>